src/objects/Health_and_Wellbeing_Assessment__c.object
<CustomObject>
    <description>Biospsychosocial and substance abuse assessment form designed by Andrea Yaffee. 12/2017</description>
    <fields>
        <fullName>Abuse__c</fullName>
        <label>Abuse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aggressive_Behavior__c</fullName>
        <label>Aggressive Behavior</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssessmentID__c</fullName>
        <description>Link to assessment object</description>
        <label>Assessment ID</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipName>CEP_BPS_Assessments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Health_and_Wellbeing_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cultural_Considerations__c</fullName>
        <description>Describes the participants self-identified race and ethnicity, primary language, cultural or religious features that are important to them.</description>
        <label>Cultural Considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Anger__c</fullName>
        <label>Describe Anger</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Alone_or_Peers__c</fullName>
        <label>Drugs1 - Alone or Peers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Contact_Info__c</fullName>
        <label>Drugs1 - Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Date_Started__c</fullName>
        <label>Drugs1 - Date Started</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Dates__c</fullName>
        <description>Beginning End dates of treatment</description>
        <label>Drugs1 - Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Drug_Name__c</fullName>
        <label>Drugs1 - Drug Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs1_First_Time_Used__c</fullName>
        <label>Drugs1 - First Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Get_Out_Of__c</fullName>
        <description>What do you get out of using?</description>
        <label>Drugs1 - Get Out Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Last_Time_Used__c</fullName>
        <label>Drugs1 - Last Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Name_of_Program__c</fullName>
        <label>Drugs1 - Name of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Tried_to_Stop__c</fullName>
        <description>Have you ever tried to stop?</description>
        <label>Drugs1 - Tried to Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs1_Type_of_Treatment__c</fullName>
        <label>Drugs1 - Type of Treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Alone_or_Peers__c</fullName>
        <label>Drugs2 - Alone or Peers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Contact_Info__c</fullName>
        <label>Drugs2 - Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Date_Started__c</fullName>
        <label>Drugs2 - Date Started</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Dates__c</fullName>
        <description>Beginning End dates of treatment</description>
        <label>Drugs2 - Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Drug_Name__c</fullName>
        <label>Drugs2 - Drug Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs2_First_Time_Used__c</fullName>
        <label>Drugs2 - First Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Get_Out_Of__c</fullName>
        <description>What do you get out of using?</description>
        <label>Drugs2 - Get Out Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Last_Time_Used__c</fullName>
        <label>Drugs2 - Last Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Name_of_Program__c</fullName>
        <label>Drugs2 - Name of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Tried_to_Stop__c</fullName>
        <description>Have you ever tried to stop?</description>
        <label>Drugs2 - Tried to Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs2_Type_of_Treatment__c</fullName>
        <label>Drugs1 - Type of Treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs3_Alone_or_Peers__c</fullName>
        <label>Drugs3 - Alone or Peers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs3_Drug_Name__c</fullName>
        <label>Drugs3 - Drug Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs3_First_Time_Used__c</fullName>
        <label>Drugs3 - First Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs3_Get_Out_Of__c</fullName>
        <description>What do you get out of using?</description>
        <label>Drugs3 - Get Out Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs3_Last_Time_Used__c</fullName>
        <label>Drugs3 - Last Time Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs3_Tried_to_Stop__c</fullName>
        <description>Have you ever tried to stop?</description>
        <label>Drugs3 - Tried to Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2/Synthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opiates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Include name of school, high grade completed, special education, last time they attended, degrees</description>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <description>Include name of employer, position held, how long have you been there and what is their work schedule</description>
        <label>Employment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ending_Life__c</fullName>
        <label>Ending Life</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Describe who they live with, relation to those people, where, stability in housing, any changes, safety concerns</description>
        <label>Environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Members__c</fullName>
        <description>Include name(s), age(s), living arrangements  of children and who is the primary caregiver</description>
        <label>Family Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Structure__c</fullName>
        <description>Include family members and relationships, any significant changes in family structure, relationship with family
Include name(s), age(s), living arrangements of children and who is the primary caregiver</description>
        <label>Family Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Education__c</fullName>
        <label>Goals - Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Family__c</fullName>
        <label>Goals - Family</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Mental_Health__c</fullName>
        <label>Goals - Mental Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Peers__c</fullName>
        <label>Goals - Peers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Satisfaction__c</fullName>
        <label>Goals - Satisfaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Substance_Use__c</fullName>
        <label>Goals - Substance Use</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Harming_Others__c</fullName>
        <label>Harming Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_History__c</fullName>
        <label>Legal History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MH1_Contact__c</fullName>
        <label>MH1 - Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MH1_Length_of_Time__c</fullName>
        <label>MH1 - Length of Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MH1_Name_of_Program__c</fullName>
        <label>MH1 - Name of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MH1_Type_of_Program__c</fullName>
        <label>MH1 - Type of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MH_Hospitalized__c</fullName>
        <description>Follow-up to Past Ideations question.</description>
        <label>MH - Hospitalized?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health__c</fullName>
        <description>Gather information on if they are in treatment, where, are they attending regularly, medication, compliance.
Include any past treatment, hospitalizations, family history</description>
        <label>Mental Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Status__c</fullName>
        <label>Mental Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>CEP Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CEP_BPS_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Past_Ideations__c</fullName>
        <label>Past Ideations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Peers_Support__c</fullName>
        <description>Describe who they spend time with, support systems, significant others, gang involvement</description>
        <label>Peers/Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Strengths__c</fullName>
        <description>Positive/Personal Strengths</description>
        <label>Personal Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Health__c</fullName>
        <description>Describe any health conditions, medication, hospitalization, head trauma</description>
        <label>Physical Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presenting_Challenges__c</fullName>
        <description>Summarize any presenting challenges, any significant events or changes in life, home, school, family or social, recent or past, results of assessments</description>
        <label>Presenting Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Harm__c</fullName>
        <label>Self Harm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Presenting__c</fullName>
        <description>Briefly describe the participants  presenting problems, clinicians observations and any psychosocial stressors that may be a factor in the participant&apos;s program participation or overall functioning.</description>
        <label>Summary - Presenting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Strengths__c</fullName>
        <description>Briefly describe the participant’s strengths, supports and resilience that may contribute to the participants program participation or overall functioning.</description>
        <label>Summary - Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Health and Wellbeing Assessment</label>
    <nameField>
        <displayFormat>HWB-{0000}</displayFormat>
        <label>HWB ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health and Wellbeing Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>